--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
 <nav id="navigation" data-toggler=".open">
   <div class="grid-container">
     <div class="topbar">
-      <span>Telefon: <a href="tel:+496819256716">+49 681 / 9256716</a></span>
+      <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a></span>
+      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
         <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
       </a>
       <ul class="cell large-auto main-nav">
-        <li><a class="" href="preise.html">Preise</a></li>
-        <li><a class="" href="leistungen.html">Leistungen</a></li>
+        <li><a class="" href="onkologie.html">Onkologisches Training</a></li>
       </ul>
     </div>
   </div>
@@ -65,8 +64,8 @@
     <img class="logo-mobile" src="assets/img/logo-mobile.svg" alt="Podologie-Praxis Bellevue Logo">
   </a>
   <div class="icon-wrap">
-    <a class="icon" href="tel:+496819256716"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:podobellevue@arcor.de"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
+    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
@@ -85,66 +84,65 @@
     </div>
   </div>
 </div>
-
-<div class="cmp cmp-home-about">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Wir stellen uns vor</h2>
-        <p class="font-20">Unser Team besteht aus</p>
-        <ul>
-          <li>Einer Podologin</li>
-          <li>Einer Fachfußpflegerin</li>
-        </ul>
-        <p class="font-20">
-          Wir sind alle darauf bedacht uns regelmäßig weiterzubilden und die Technik immer auf den neuesten Stand zu bringen.
-          Zudem wird die Hygiene auf höchsten Anforderungen eingehalten.
-        </p>
-      </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/nicole.png" alt="Foto von Nicole Mordiconi">
-            <h4>Nicole Mordiconi</h4>
-            <span>Podologin, Inhaberin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="cmp cmp-home-introduction">
   <div class="grid-container">
     <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Bei uns sind Ihre Füße in guten Händen!</h2>
-      <div class="cell">
+      <h2 class="cell small-12">Jahrelange erfahrung</h2>
+      <!-- div class="cell">
         <ul class="grid-x grid-margin-x medium-up-2">
           <li class="cell">Wie sehen meine Füße aus?</li>
           <li class="cell">Was machen meine Füße für mich?</li>
           <li class="cell">Wie fühlen sich meine Füße an?</li>
           <li class="cell">Was mache ich für meine Füße?</li>
         </ul>
-      </div>
+      </div -->
       <p class="cell">
         So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
         Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
         Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
       </p>
+    </div>
+  </div>
+</div>
+<div class="cmp cmp-home-about">
+  <div class="grid-container">
+    <div class="grid-x grid-margin-x grid-margin-y">
+      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
+        <h2>Unser Team besteht aus</h2>
+        <br>
+        <ul>
+          <li>zwei Physiotheropeuten</li>
+          <li>zwei Fitnesstrainer</li>
+        </ul>
+        <p class="font-20">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
+          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+        </p>
+      </div>
+      <div class="cell medium-4 large-6">
+        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von Patrick Mordiconi. Inhaber und Physiotherapeut">
+            <h4>Patrick Mordiconi</h4>
+            <span>Inhaber</span>
+          </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von Noah Mordiconi - Pysiotherapeutin">
+            <h4>Noah Mordiconi</h4>
+            <span>Physiotherapeutin</span>
+          </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von ">
+            <h4>Max Mustermann</h4>
+            <span>Musterberuf</span>
+          </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von ">
+            <h4>Max Mustermann</h4>
+            <span>Musterberuf</span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -182,42 +180,38 @@
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        09:00 — 15:00 Uhr
+        08:00 — 19:00 Uhr
       <p>
-      <p>Freitag: geschlossen</p>
-      <p class="small hide-for-large">
-        Termine außerhalb der Öffnungszeiten und Hausbesuche nach Vereinbarung
+      <p>Freitag: <br>
+        08:00 — 13:00 Uhr
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
-        <a href="tel:+496819256716">+49 681 / 9256716</a>
+        <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
         E-Mail:<br>
-        <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a>
+        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
       </p>
     </div>
     <div class="cell large-3">
       <h4 class="black">Anfahrt</h4>
       <address>
-        Podopraxis Bellevue<br>
-        Lerchesflurweg 9<br>
+        med. Gesundheitszentrum Bellevue<br>
+        Lerchesflurweg 24A<br>
         66119 Saarbrücken
       </address>
     </div>
     <hr class="hide-for-large">
-    <div class="cell large-3 relative">
+    <div class="cell large-2 relative">
       <a class="cell large-shrink logo-wrap" href="https://www.myairbag24.de" target="_blank">
         <img src="assets/img/ott-logo.png" alt="Logo Onkologische Trainings- und Bewegungstherapie">
       </a>
     </div>
     <div class="cell bottom-info">
-      <p class="opening-info show-for-large small">
-        Termine außerhalb der Öffnungszeiten und Hausbesuche nach Vereinbarung
-      </p>
       <div class="bottom-link">
         <a href="impressum.html">Impressum</a>
         <span class="spacer">|</span>
