--- a/leistungen.html
+++ b/leistungen.html
@@ -38,17 +38,16 @@
 <nav id="navigation" data-toggler=".open">
   <div class="grid-container">
     <div class="topbar">
-      <span>Telefon: <a href="tel:+496819256716">+49 681 / 9256716</a></span>
+      <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a></span>
+      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
         <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
       </a>
       <ul class="cell large-auto main-nav">
-        <li><a class="" href="preise.html">Preise</a></li>
-        <li><a class="active" href="leistungen.html">Leistungen</a></li>
+        <li><a class="" href="onkologie.html">Onkologisches Training</a></li>
       </ul>
     </div>
   </div>
@@ -65,8 +64,8 @@
     <img class="logo-mobile" src="assets/img/logo-mobile.svg" alt="Podologie-Praxis Bellevue Logo">
   </a>
   <div class="icon-wrap">
-    <a class="icon" href="tel:+496819256716"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:podobellevue@arcor.de"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
+    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
@@ -176,42 +175,38 @@
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        09:00 — 15:00 Uhr
+        08:00 — 19:00 Uhr
       <p>
-      <p>Freitag: geschlossen</p>
-      <p class="small hide-for-large">
-        Termine außerhalb der Öffnungszeiten und Hausbesuche nach Vereinbarung
+      <p>Freitag: <br>
+        08:00 — 13:00 Uhr
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
-        <a href="tel:+496819256716">+49 681 / 9256716</a>
+        <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
         E-Mail:<br>
-        <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a>
+        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
       </p>
     </div>
     <div class="cell large-3">
       <h4 class="black">Anfahrt</h4>
       <address>
-        Podopraxis Bellevue<br>
-        Lerchesflurweg 9<br>
+        med. Gesundheitszentrum Bellevue<br>
+        Lerchesflurweg 24A<br>
         66119 Saarbrücken
       </address>
     </div>
     <hr class="hide-for-large">
-    <div class="cell large-3 relative">
+    <div class="cell large-2 relative">
       <a class="cell large-shrink logo-wrap" href="https://www.myairbag24.de" target="_blank">
         <img src="assets/img/ott-logo.png" alt="Logo Onkologische Trainings- und Bewegungstherapie">
       </a>
     </div>
     <div class="cell bottom-info">
-      <p class="opening-info show-for-large small">
-        Termine außerhalb der Öffnungszeiten und Hausbesuche nach Vereinbarung
-      </p>
       <div class="bottom-link">
         <a href="impressum.html">Impressum</a>
         <span class="spacer">|</span>
