--- a/onkologie.html
+++ b/onkologie.html
@@ -47,7 +47,7 @@
         <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
       </a>
       <ul class="cell large-auto main-nav">
-        <li><a class="" href="onkologie.html">Onkologisches Training</a></li>
+        <li><a class="active" href="onkologie.html">Onkologisches Training</a></li>
       </ul>
     </div>
   </div>
@@ -69,123 +69,122 @@
   </div>
 </div>
 
-<div class="cmp cmp-header-text">
+<div class="cmp cmp-header-text onkologie">
+  <div class="cmp ott-header">
+    <img class="ott-header bottom-space" src="assets/img/ott/ott_1.jpg" alt="Titelbild der Onkologische Trainings- und Bewegungstherapie">
+  </div>
   <div class="grid-container">
     <div class="cell text-header">
-      <h1>Preise</h1>
+      <h1>OTT<sup><small>®</small></sup></h1>
+      <h2>Onkologische Trainings- und Bewegungstherapie</h2>
+      <p>
+        Wir bieten in unserer Praxis die OTT<sup><small></small>®</small></sup> - Onkologische Trainings- und Bewegungstherapie an. 
+        Unsere OTT<sup><small>®</small></sup>-Therapeut*innen sind speziell für die Arbeit mit Krebspatient*innen ausgebildet. 
+        Die OTT<sup><small>®</small></sup>-Therapeut*innen, wie auch Durchführung, Ablauf und Prozesse der OTT<sup><small>®</small></sup>, sind zertifiziert. 
+        Wir orientieren uns fortlaufend am neuesten Forschungsstand.
+      </p>
     </div>
   </div>
 </div>
-<div class="cmp cmp-price-list">
-  <div class="margin-b-2 callout">
-    <div class="grid-container">
-      <div class="grid-x">
-        <p class="cell">
-          <strong>Liebe Patientinnen / Patienten,</strong> <br>
-          Therapie ist nicht gleich Therapie, klären Sie erst, welche Leistungen Sie persönlich
-          benötigen. Erst nach der Befunderhebung durch die Therapiepraxis wird festgelegt,
-          welche Qualifikation der Therapeut benötigt, welche Methode, wie intensiv, in
-          welcher Häufigkeit etc. die Behandlung durchgeführt werden muss.
-          Dies ist dann entscheidend für die Berechnung der Behandlungskosten.
-          <br>
-          <br>
-          Unsere Preisvereinbarungen richten sich nach der Berechnung der gesetzlichen
-          Krankenkasse und der Gebührenordnung für Therapeuten (Privatpatienten,
-          Privatzahler).
-        </p>
-      </div>
-    </div>
-  </div>
-  <br>
+<br>
+<div class="cmp cmp-ott-list">
   <div class="grid-container">
     <div class="grid-x">
+      <h3 class="cell">Was ist die OTT<sup><small>®</small></sup></h3>
       <div class="cell">
-        <h4>
-          Neue Preise für die Podologie
-        </h4>
-        <p>Für Behandlungen, die ab dem 1. Juli 2022 stattfinden, sind pro Behandlung folgende Preise abzurechnen:</p>
-        <ul class="main-pricelist">
-          <li class="list-element">
-            <span>
-              <small>HPNR: 78010</small><br>
-              <strong>Podologische Behandlung (klein)</strong>
-            </span>
-            <span>
-              <small>Vergütung</small><br>
-              <strong>30,70€</strong>
-            </span>
-            <span>
-              <small>davon Zuzahlung (nachrichtlich)</small><br>
-              <strong>3,07€</strong>
-            </span>
+        <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+          <li class="cell">
+            Die Onkologische Trainings- und Bewegungstherapie ist eine supervidierte und personalisierte Trainings- und Bewegungstherapie für Krebspatient*innen vor, während und nach der medizinischen Behandlung.
           </li>
-          <li class="list-element">
-            <span>
-              <small>HPNR: 78020</small><br>
-              <strong>Podologische Behandlung (groß)</strong>
-            </span>
-            <span>
-              <small>Vergütung</small><br>
-              <strong>44,00€</strong>
-            </span>
-            <span>
-              <small>davon Zuzahlung (nachrichtlich)</small><br>
-              <strong>4,40€</strong>
-            </span>
+          <li class="cell">
+            Die OTT<sup><small>®</small></sup> wurde am Centrum für Integrierte Onkologie (CIO) an der Uniklinik Köln in Zusammenarbeit mit der Deutschen Sporthochschule entwickelt.
           </li>
-          <li class="list-element">
-            <span>
-              <small>HPNR: 78030</small><br>
-              <strong>Podologische Befundung</strong>
-            </span>
-            <span>
-              <small>Vergütung</small><br>
-              <strong>3,00€</strong>
-            </span>
-            <span>
-              <small>davon Zuzahlung (nachrichtlich)</small><br>
-              <strong>0,30€</strong>
-            </span>
+          <li class="cell">
+            Die OTT<sup><small>®</small></sup> besteht seit 2012 und wird am CIO Köln unter der Leitung von Prof. Dr. Hallek stetig weiter erforscht und entwickelt. Sie ist integraler Bestandteil der supportiven Behandlungs- und Therapiemethoden in der Onkologie.
           </li>
-          <li class="list-element">
-            <span>
-              <small>HPNR: 79933</small><br>
-              <strong>Hausbesuch, ärztlich verordnet, inkl. Wegegeld</strong>
-            </span>
-            <span>
-              <small>Vergütung</small><br>
-              <strong>17,50€</strong>
-            </span>
-            <span>
-              <small>davon Zuzahlung (nachrichtlich)</small><br>
-              <strong>1,75€</strong>
-            </span>
+          <li class="cell">
+            Sie darf nur von zertifizierten Sport- und Physiotherapeut*innen sowie Sportwissenschaftler*innen unter dem Namen OTT<sup><small>®</small></sup> angeboten werden.
           </li>
-          <li class="list-element">
-            <span>
-              <small>HPNR: 79934</small><br>
-              <strong>Hausbesuch in soz. Einrichtungen inkl. Wegegeld</strong>
-            </span>
-            <span>
-              <small>Vergütung</small><br>
-              <strong>10,00€</strong>
-            </span>
-            <span>
-              <small>davon Zuzahlung (nachrichtlich)</small><br>
-              <strong>1,00€</strong>
-            </span>
+          <li class="cell">
+            Das modulare Konzept wird direkt abgestimmt auf die Krebsart, den Behandlungsweg und die Nebenwirkungen.
+          </li>
+          <li class="cell">
+            Die positiven Effekte der Bewegungstherapie bei onkologischen Patient*innen sind durch mehr als 700 wissenschaftliche Studien höchster Güte belegt.
+          </li>
+          <li class="cell">
+            Die OTT<sup><small>®</small></sup> ist streng evidenzbasiert und wird fortlaufend nach neuesten wissenschaftlichen Erkenntnissen aktualisiert.
+          </li>
+          <li class="cell">
+            Die OTT<sup><small>®</small></sup> wird von der Deutschen Krebsgesellschaft empfohlen & durch Krankenkassen unterstützt. Eine eigene S3-Leitlinie (medizinische Leitlinie für Gesundheitsversorgung) ist in Umsetzung.
           </li>
         </ul>
-        <p>
-          Seit dem 1. Juli 2019 gibt es bundesweit einheitliche Preise für alle Heilmittelerbringer — der Grund ist das Terminservice-
-          und Versorgungsgesetz. Vorher galten in jedem Bundesland und für jede Kassenart unterschiedliche Preise für Physiotherapie
-          Ergotherapie oder Podologie.
-        </p>
       </div>
+      
+      <img class="cell bottom-space top-space" src="assets/img/ott/ott_2.jpg" alt="Beispielbild Onkologische Trainings- und Bewegungstherapie">
+
+      <h3 class="cell">Vorteile für onkologische Patient*innen</h3>
+      <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+        <li class="cell">
+          Geeignet für Patient*innen aller Krebsarten, Altersgruppen und Fitnesslevel
+        </li>
+        <li class="cell">
+          Ausführliches Anamnesegespräch und individuelle Anpassung des Trainings an Krebsart, Nebenwirkungen, Fitnesslevel und Zielsetzung der Patient*innen
+        </li>
+        <li class="cell">
+          Personalisierte Trainings- und Bewegungstherapie direkt am Wohnort
+        </li>
+        <li class="cell">
+          Deutliche Reduzierung der Nebenwirkungen der Krebserkrankung bzw. der medizinischen Behandlung (z.B. Fatigue, Polyneuropathie, Inkontinenz)
+        </li>
+        <li class="cell">
+          Verbesserte Lebensqualität und Stärkung der mentalen Verfassung
+        </li>
+        <li class="cell">
+          Ständige Verbesserung der Therapie durch enge Verbindung zur Forschung im CIO an der Universität Köln
+        </li>
+      </ul>
+
+      <img class="cell bottom-space top-space" src="assets/img/ott/ott_3.jpg" alt="Beispielbild Onkologische Trainings- und Bewegungstherapie">
+
+      <h3 class="cell">Wie sieht ein OTT<sup><small>®</small></sup>-Training in unserer Einrichtung aus?</h3>
+      <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+        <li class="cell">
+          Anamnesegespräch mit erfahrenen und speziell qualifizierten OTT<sup><small>®</small></sup>-Therapeut*innen
+        </li>
+        <li class="cell">
+          Erarbeitung eines individuellen Trainingstherapie-Plans mit Kraft-, Ausdauer- und Koordinationsübungen
+        </li>
+        <li class="cell">
+          Einbezug vorhandener Trainingsgeräte (u.a. Kraftgeräte, Ergometer, Cross-Trainer).
+        </li>
+        <li class="cell">
+          Regelmäßige Teilnahme: mindestens 1-2 x pro Woche, Dauer 3 bis 9 Monate
+        </li>
+        <li class="cell">
+          Fortlaufende Zwischendiagnostiken und eventuelle Anpassung des Trainingsprogramms
+        </li>
+        <li class="cell">
+          Tipps für eine Fortführung des Trainings in der Einrichtung oder zuhause nach erfolgreichem Abschluss der OTT<sup><small>®</small></sup>
+        </li>
+      </ul>
+
+      <img class="cell bottom-space top-space" src="assets/img/ott/ott_4.jpg" alt="Beispielbild Onkologische Trainings- und Bewegungstherapie">
+
+      <h3 class="cell">Informationen zu MYAIRBAG</h3>
+      <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+        <li class="cell">
+          Die MYAIRBAG- Training gegen Krebs GmbH ist ein aus der Uniklinik Köln heraus gegründetes Unternehmen mit dem Ziel, die Onkologische Trainings- und Bewegungstherapie OTT<sup><small>®</small></sup> in die breite Fläche zu bringen.
+        </li>
+        <li class="cell">
+          Bislang wurden durch MYAIRBAG 105 zertifizierte OTT<sup><small>®</small></sup>-Therapeut*innen ausgebildet. (Stand: Jan. 2022)
+        </li>
+        <li class="cell">
+          In Deutschland gibt es bislang 42 lizenzierte OTT<sup><small>®</small></sup>-Partnereinrichtungen.
+        </li>
+      </ul>
     </div>
   </div>
-</div>
-<div class="cmp cmp-cta">
+</div><div class="cmp cmp-cta">
   <div class="grid-container">
     <div class="grid-x">
       <h2 class="cell">
@@ -200,7 +199,6 @@
     </div>
   </div>
 </div>
-
 
 <footer class="grid-container">
   <div class="grid-x grid-margin-x grid-margin-y">
