quick fix update

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -127,7 +127,7 @@
         08:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
-        08:00 — 13:00 Uhr
+        09:00 — 13:00 Uhr
       </p>
     </div>
     <div class="cell large-4">
@@ -145,7 +145,7 @@
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
-        Lerchesflurweg 24A<br>
+        Lerchesflurweg 24a<br>
         66119 Saarbrücken
       </address>
     </div>
