--- a/preise.html
+++ b/preise.html
@@ -195,7 +195,7 @@
         <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
         <span class="spacer show-for-medium">|</span>
         <br class="hide-for-medium">
-        <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
+        <span>E-Mail: <a href="mailto:onkologischetherapie24a@gmail.com">onkologischetherapie24a@gmail.com</a></span>
       </div>
     </div>
   </div>
@@ -211,7 +211,7 @@
         08:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
-        08:00 — 13:00 Uhr
+        09:00 — 13:00 Uhr
       </p>
     </div>
     <div class="cell large-4">
@@ -229,7 +229,7 @@
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
-        Lerchesflurweg 24A<br>
+        Lerchesflurweg 24a<br>
         66119 Saarbrücken
       </address>
     </div>
