--- a/datenschutz.html
+++ b/datenschutz.html
@@ -40,7 +40,7 @@
     <div class="topbar">
       <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
+      <span>E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
@@ -65,7 +65,7 @@
   </a>
   <div class="icon-wrap">
     <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="mailto:med.gesundheitszentrumbellevue@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
@@ -78,24 +78,18 @@
 </div>
 <div class="cmp cmp-data-textblock">
   <div class="grid-container">
-    <h4>Podologiepraxis Bellevue</h4>
+    <h4>Med. Gesundheitszentrum Bellevue</h4>
     <address>
-      Nicole Mordiconi<br>
-      Podologiepraxis<br>
-      Lerchesflurweg 9<br>
+      Patrick Mordiconi<br>
+      Lerchesflurweg 24a<br>
       66119 Saarbrücken<br>
-      <br>
-      E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a><br>
-      Telefon: <a href="tel:+496819104646">+49 681 9104646</a><br>
-      <br>
-      IK. 391000319
     </address>
 
     <br>
 
     <h4>Informationen zur Datenerhebung nach Art. 13 DSGVO</h4>
     <p>
-      Die Nutzung unseres Internetangebotes in ohne die Angabe personenbezogener Daten möglich. Die oben genannte podologische Praxis erhebt Ihre Daten zum Zweck der Erfüllung ihrer vertraglichen Pflichten aus dem Behandlungsvertrag und zu seiner Durchführung.
+      Die Nutzung unseres Internetangebotes in ohne die Angabe personenbezogener Daten möglich. Das oben genannte Med. Gesundheitszentrum Bellevue erhebt Ihre Daten zum Zweck der Erfüllung ihrer vertraglichen Pflichten aus dem Behandlungsvertrag und zu seiner Durchführung.
       <br>
       <br>
       Eine Weitergabe der Daten an Dritte findet nur statt, soweit dies gesetzlich vorgesehen ist (Ärzte, Angehörige nichtärztlicher Gesundheitsberufe, Krankenkassen, Abrechnungsstellen).
@@ -107,41 +101,55 @@
       Sie haben das Recht, Auskunft über die bei uns über Sie gespeicherten Daten zu verlangen. Außerdem können Sie bei Unrichtigkeit der Daten deren Berichtigung oder bei unzulässiger Datenspeicherung die Löschung der Daten bzw. Einschränkung der Verarbeitung fordern.
       <br>
       <br>
-      Wenden Sie sich bitte hierfür an die Praxisinhaberin Nicole Mordiconi.
+      Wenden Sie sich bitte hierfür an den Praxisinhaber Patrick Mordiconi.
+      <br>
+      <br>
+      E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a><br>
+      Telefon: <a href="tel:+496819104646">+49 681 9104646</a>
     </p>
 
   </div>
-</div><div class="cmp cmp-cookie">
-  <div class="grid-container">
-    <script id="CookieDeclaration" src="https://consent.cookiebot.com/9ca4744e-65fd-406e-9a3b-11a5bb9334c4/cd.js" type="text/javascript" async></script>
-  </div>
 </div>
 
-
 <footer class="grid-container">
+  <h3 class="margin-0">Kooperationspartner</h3>
+  <div class="grid-x grid-margin-x grid-padding-x grid-margin-y align-center-middle" style="margin-bottom: 30px;">
+    <a class="cell large-4" style="max-width: 320px;" href="https://sowi.rptu.de/fgs/fg-sport/team/lehrbeauftragte/mordiconi-patrick" target="_blank">
+      <img src="assets/img/rptu_logo.svg" alt="">
+    </a>
+    <a class="cell large-4" style="height: fit-content; max-width: 320px;" href="https://www.krebsgesellschaft-saar.de/" target="_blank">
+      <img src="assets/img/logo-saarlaendische-krebsgesellschaft.png" alt="">
+    </a>
+    <a class="cell large-4" style="max-width: 320px;" href="https://www.htwsaar.de/" target="_blank">
+      <img src="assets/img/htw_logo.png" alt="" >
+    </a>
+  </div>
   <div class="grid-x grid-margin-x grid-margin-y">
     <div class="cell large-3">
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        08:00 — 19:00 Uhr
+        09:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
         09:00 — 13:00 Uhr
       </p>
+      <p>Samstag & Sonntag: <br>
+        10:00 — 14:00 Uhr
+      </p>
     </div>
-    <div class="cell large-4">
+    <div class="cell large-3">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
         <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
-        E-Mail:<br>
-        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
+        oder<br>
+        <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">E-Mail schreiben</a>
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
