--- a/onkologie.html
+++ b/onkologie.html
@@ -40,7 +40,7 @@
     <div class="topbar">
       <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
+      <span>E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
@@ -65,7 +65,7 @@
   </a>
   <div class="icon-wrap">
     <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="mailto:med.gesundheitszentrumbellevue@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
@@ -201,29 +201,44 @@
 </div>
 
 <footer class="grid-container">
+  <h3 class="margin-0">Kooperationspartner</h3>
+  <div class="grid-x grid-margin-x grid-padding-x grid-margin-y align-center-middle" style="margin-bottom: 30px;">
+    <a class="cell large-4" style="max-width: 320px;" href="https://sowi.rptu.de/fgs/fg-sport/team/lehrbeauftragte/mordiconi-patrick" target="_blank">
+      <img src="assets/img/rptu_logo.svg" alt="">
+    </a>
+    <a class="cell large-4" style="height: fit-content; max-width: 320px;" href="https://www.krebsgesellschaft-saar.de/" target="_blank">
+      <img src="assets/img/logo-saarlaendische-krebsgesellschaft.png" alt="">
+    </a>
+    <a class="cell large-4" style="max-width: 320px;" href="https://www.htwsaar.de/" target="_blank">
+      <img src="assets/img/htw_logo.png" alt="" >
+    </a>
+  </div>
   <div class="grid-x grid-margin-x grid-margin-y">
     <div class="cell large-3">
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        08:00 — 19:00 Uhr
+        09:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
         09:00 — 13:00 Uhr
       </p>
+      <p>Samstag & Sonntag: <br>
+        10:00 — 14:00 Uhr
+      </p>
     </div>
-    <div class="cell large-4">
+    <div class="cell large-3">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
         <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
-        E-Mail:<br>
-        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
+        oder<br>
+        <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">E-Mail schreiben</a>
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
