--- a/impressum.html
+++ b/impressum.html
@@ -40,7 +40,7 @@
     <div class="topbar">
       <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
+      <span>E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
@@ -65,7 +65,7 @@
   </a>
   <div class="icon-wrap">
     <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="mailto:med.gesundheitszentrumbellevue@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
@@ -80,12 +80,12 @@
   <div class="grid-container">
     <h4>Angaben gemäß § 5 TMG:</h4>
     <address>
-      Nicole Mordiconi<br>
-      Podologiepraxis<br>
-      Lerchesflurweg 9<br>
+      Patrick Mordiconi<br>
+      Med. Gesundheitszentrum Bellevue<br>
+      Lerchesflurweg 24a<br>
       66119 Saarbrücken<br>
       <br>
-      E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a><br>
+      E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a><br>
       Telefon: <a href="tel:+496819104646">+49 681 9104646</a>
     </address>
 
@@ -99,19 +99,20 @@
     <h4>Angaben zur Berufshaftpflichtversicherung:</h4>
     <p><b>Name und Sitz der Gesellschaft:</b></p>
     <address>
-      Axa Versicherungs AG<br>
-      Postfach 94 02 21<br>
-      51090 Köln
+      R+V Versicherungen<br>
+      Hauptsitz: Wiesbaden
     </address>
+    <br>
     <p><b>Geltungsraum der Versicherung:</b> Deutschland</p>
 
     <br>
 
     <h4>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h4>
     <address>
-      Nicole Mordiconi<br>
-      Lerchesflurweg 9<br>
-      66119 Saarbrücken
+      Patrick Mordiconi<br>
+      Med. Gesundheitszentrum Bellevue<br>
+      Lerchesflurweg 24a<br>
+      66119 Saarbrücken<br>
     </address>
 
     <br>
@@ -128,45 +129,49 @@
       </a>
     </address>
 
-    <br>
-
-    <div>
-      <h4>Quellenangaben für die verwendeten Bilder und Grafiken:</h4>
-      Titelbild (Startseite): <a href="https://unsplash.com/photos/5pi6fCg_dwo" target="_blank">www.unsplash.com/@piecdesmit</a><br>
-      <!--a href="https://unsplash.com/photos/RbrsejLGVZ8" target="_blank">www.unsplash.com/@benhartley</a><br-->
-      <!-- Osterbanner (Startseite): <a href="https://unsplash.com/photos/FjojfUNJHGU" target="_blank">www.unsplash.com/@frostroomhead</a><br> -->
-      Arm (Medihandcare): <a href="https://unsplash.com/photos/T0xPy9PDyf4" target="_blank">www.unsplash.com/@adriensking</a><br>
-      Covid-Icon (Startseite): <a href="https://www.freepik.com/vectors/sign-board" target="_blank">www.freepik.com</a>
-    </div>
-
   </div>
 </div>
 
 
 <footer class="grid-container">
+  <h3 class="margin-0">Kooperationspartner</h3>
+  <div class="grid-x grid-margin-x grid-padding-x grid-margin-y align-center-middle" style="margin-bottom: 30px;">
+    <a class="cell large-4" style="max-width: 320px;" href="https://sowi.rptu.de/fgs/fg-sport/team/lehrbeauftragte/mordiconi-patrick" target="_blank">
+      <img src="assets/img/rptu_logo.svg" alt="">
+    </a>
+    <a class="cell large-4" style="height: fit-content; max-width: 320px;" href="https://www.krebsgesellschaft-saar.de/" target="_blank">
+      <img src="assets/img/logo-saarlaendische-krebsgesellschaft.png" alt="">
+    </a>
+    <a class="cell large-4" style="max-width: 320px;" href="https://www.htwsaar.de/" target="_blank">
+      <img src="assets/img/htw_logo.png" alt="" >
+    </a>
+  </div>
   <div class="grid-x grid-margin-x grid-margin-y">
     <div class="cell large-3">
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        08:00 — 19:00 Uhr
+        09:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
         09:00 — 13:00 Uhr
       </p>
+      <p>Samstag & Sonntag: <br>
+        10:00 — 14:00 Uhr
+      </p>
     </div>
-    <div class="cell large-4">
+    <div class="cell large-3">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
         <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
-        E-Mail:<br>
-        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
+        oder<br>
+        <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">E-Mail schreiben</a>
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
