--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="topbar">
       <span>Telefon: <a href="tel:+496819104646">+49 681 9104646</a></span>
       <span class="spacer show-for-medium">|</span>
-      <span>E-Mail: <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a></span>
+      <span>E-Mail: <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">med.gesundheitszentrumbellevue@gmail.com</a></span>
     </div>
     <div class="grid-x grid-margin-x">
       <a class="cell large-shrink logo-wrap" href="index.html">
@@ -65,14 +65,14 @@
   </a>
   <div class="icon-wrap">
     <a class="icon" href="tel:+496819104646"><img class="phone" src="assets/img/icon-phone.svg" alt="Telefon Icon um anzurufen"></a>
-    <a class="icon" href="mailto:koordinationszentrum@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
+    <a class="icon" href="mailto:med.gesundheitszentrumbellevue@gmail.com"><img class="mail" src="assets/img/icon-mail.svg" alt="E-Mail Icon um eine E-Mail zu schreiben"></a>
   </div>
 </div>
 
 <div class="cmp cmp-header-img">
   <div class="grid-container page-title">
     <div class="grid-x">
-      <div class="cell">
+      <div class="cell black-bg">
         <h3 class="light">Herzlich willkommen im medizinischen</h3>
         <h1>
           Gesundheitszentrum Bellevue
@@ -87,7 +87,7 @@
 <div class="cmp cmp-home-introduction">
   <div class="grid-container">
     <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Jahrelange erfahrung</h2>
+      <h2 class="cell small-12">Jahrelange Erfahrung</h2>
       <!-- div class="cell">
         <ul class="grid-x grid-margin-x medium-up-2">
           <li class="cell">Wie sehen meine Füße aus?</li>
@@ -97,49 +97,56 @@
         </ul>
       </div -->
       <p class="cell">
-        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
-        Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
-        Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
+        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>Januar 2000</strong> um Ihre Gesundheit und alles was damit zusammenhängt.
+        Wir bieten Ihnen vielfältige Behandlungen für Ihren Körper und beraten Sie ausführlich zu allen Fragen und Problemen rund um Ihre Gesundheit.
       </p>
     </div>
   </div>
 </div>
+
+
+
 <div class="cmp cmp-home-about">
   <div class="grid-container">
     <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Unser Team besteht aus</h2>
+      <div class="cell large-6 text-padding-right headline-about">
+        <h2>Wir sind das Team des Med. Gesundheitszentrum Bellevue</h2>
         <br>
-        <ul>
+        <!--ul>
           <li>zwei Physiotheropeuten</li>
           <li>zwei Fitnesstrainer</li>
         </ul>
         <p class="font-20">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
           invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-        </p>
+        </p-->
       </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
+      <div class="cell large-6">
+        <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-2">
           <div class="cell image-text-box">
             <img src="assets/img/portraits/patrick.jpg" alt="Foto von Patrick Mordiconi. Inhaber und Physiotherapeut">
             <h4>Patrick Mordiconi</h4>
             <span>Inhaber</span>
           </div>
           <div class="cell image-text-box">
-            <img src="assets/img/portraits/patrick.jpg" alt="Foto von Noah Mordiconi - Pysiotherapeutin">
-            <h4>Noah Mordiconi</h4>
-            <span>Physiotherapeutin</span>
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von ">
+            <h4>Simone Mordiconi</h4>
+            <span>Buchhaltung</span>
+          </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/patrick.jpg" alt="Foto von Noa Mordiconi - Hygienebeauftragte">
+            <h4>Noa Mordiconi</h4>
+            <span>Hygienebeauftragte</span>
           </div>
           <div class="cell image-text-box">
             <img src="assets/img/portraits/patrick.jpg" alt="Foto von ">
-            <h4>Max Mustermann</h4>
-            <span>Musterberuf</span>
+            <h4>Emma Mordiconi</h4>
+            <span>Organisation</span>
           </div>
           <div class="cell image-text-box">
             <img src="assets/img/portraits/patrick.jpg" alt="Foto von ">
-            <h4>Max Mustermann</h4>
-            <span>Musterberuf</span>
+            <h4>Valentin Mordiconi</h4>
+            <span>Kundenbetreuer</span>
           </div>
         </div>
       </div>
@@ -175,29 +182,44 @@
 
 
 <footer class="grid-container">
+  <h3 class="margin-0">Kooperationspartner</h3>
+  <div class="grid-x grid-margin-x grid-padding-x grid-margin-y align-center-middle" style="margin-bottom: 30px;">
+    <a class="cell large-4" style="max-width: 320px;" href="https://sowi.rptu.de/fgs/fg-sport/team/lehrbeauftragte/mordiconi-patrick" target="_blank">
+      <img src="assets/img/rptu_logo.svg" alt="">
+    </a>
+    <a class="cell large-4" style="height: fit-content; max-width: 320px;" href="https://www.krebsgesellschaft-saar.de/" target="_blank">
+      <img src="assets/img/logo-saarlaendische-krebsgesellschaft.png" alt="">
+    </a>
+    <a class="cell large-4" style="max-width: 320px;" href="https://www.htwsaar.de/" target="_blank">
+      <img src="assets/img/htw_logo.png" alt="" >
+    </a>
+  </div>
   <div class="grid-x grid-margin-x grid-margin-y">
     <div class="cell large-3">
       <h4 class="black">Öffnungszeiten</h4>
       <p>
         Montag - Donnerstag:<br>
-        08:00 — 19:00 Uhr
+        09:00 — 19:00 Uhr
       <p>
       <p>Freitag: <br>
         09:00 — 13:00 Uhr
       </p>
+      <p>Samstag & Sonntag: <br>
+        10:00 — 14:00 Uhr
+      </p>
     </div>
-    <div class="cell large-4">
+    <div class="cell large-3">
       <h4 class="black">Kontakt</h4>
       <p>
         Telefon:<br>
         <a href="tel:+496819104646">+49 681 9104646</a>
       </p>
       <p>
-        E-Mail:<br>
-        <a href="mailto:koordinationszentrum@gmail.com">koordinationszentrum@gmail.com</a>
+        oder<br>
+        <a href="mailto:med.gesundheitszentrumbellevue@gmail.com">E-Mail schreiben</a>
       </p>
     </div>
-    <div class="cell large-3">
+    <div class="cell large-4">
       <h4 class="black">Anfahrt</h4>
       <address>
         med. Gesundheitszentrum Bellevue<br>
